--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 </head>
 <body>
+  <div id="scrollbar">
+
+
   <!-- NavBar -->
   <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-dark orange lighten-1">
@@ -101,7 +104,7 @@
           </div>
         </div>
       </div>
-
+    </div>
     <!-- end list project section -->
     
   <!-- End main section -->
