--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/scrollbar.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/jdenticon@2.2.0" async>
   </script>
   
