--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
   <div class="row">
     <div class="col-md-12">
         <!-- Crete FOrm -->
-        <div id="loader" class=" mt-4 text-center text-bold mb-4">####### LOADING #######</div>
+        <div class="gooey">
+          <span class="dot"></span>
+          <div class="dots">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
         <div class="text-center border border-light p-5" id="add_project_form">
           <p class="h4 mb-4">Create Project</p>
           <p>Start Project And Get Others To Fund It </p>
