--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="row">
     <div class="col-md-12">
         <!-- Crete FOrm -->
-        <div class="gooey">
+        <div id="loader" class="gooey">
           <span class="dot"></span>
           <div class="dots">
             <span></span>
