--- a/index.html
+++ b/index.html
@@ -65,14 +65,21 @@
   <div class="row">
     <div class="col-md-12">
         <!-- Crete FOrm -->
-        <div id="loader" class="gooey">
-          <span class="dot"></span>
-          <div class="dots">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-        </div>
+
+        <!-- Loader -->
+        <center><br><br><br>
+          <div class="loader" id="loader"></div>
+          <div class="loader" id="loader2"></div>
+          <div class="loader" id="loader3"></div>
+          <div class="loader" id="loader4"></div>
+            <!--Delete the "loader3" and "loader4" divs for a 2-layer loader-->
+            <!--You can also change the animation durations or delays, that looks also pretty cool -->
+          <span id="text">LOADING...</span><br>
+            <!--
+          OLD VERSION
+          https://codepen.io/NitrodeXXer/pen/MvEyML
+          -->
+        <!--  -->
         <div class="text-center border border-light p-5" id="add_project_form">
           <p class="h4 mb-4">Create Project</p>
           <p>Start Project And Get Others To Fund It </p>
