--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
         <!-- Crete FOrm -->
 
         <!-- Loader -->
+        <div id="loader">
         <center><br><br><br>
-          <div class="loader" id="loader"></div>
-          <div class="loader" id="loader2"></div>
-          <div class="loader" id="loader3"></div>
-          <div class="loader" id="loader4"></div>
+          <div class="loader" ></div>
+          <div class="loader2"></div>
+          <div class="loader3" ></div>
+          <div class="loader4"></div>
             <!--Delete the "loader3" and "loader4" divs for a 2-layer loader-->
             <!--You can also change the animation durations or delays, that looks also pretty cool -->
           <span id="text">LOADING...</span><br>
+        </div>
             <!--
           OLD VERSION
           https://codepen.io/NitrodeXXer/pen/MvEyML
