--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
 
         <!-- Loader -->
         <div id="loader">
-        <center><br><br><br>
-          <div class="loader" ></div>
-          <div class="loader2"></div>
-          <div class="loader3" ></div>
-          <div class="loader4"></div>
-            <!--Delete the "loader3" and "loader4" divs for a 2-layer loader-->
-            <!--You can also change the animation durations or delays, that looks also pretty cool -->
-          <span id="text">LOADING...</span><br>
+          <div class="loading"></div>
         </div>
             <!--
           OLD VERSION
