--- a/index.html
+++ b/index.html
@@ -67,13 +67,8 @@
         <!-- Crete FOrm -->
 
         <!-- Loader -->
-        <div id="loader">
-          <div class="loading"></div>
-        </div>
-            <!--
-          OLD VERSION
-          https://codepen.io/NitrodeXXer/pen/MvEyML
-          -->
+        <div id="loading-bar-spinner" class="spinner"><div class="spinner-icon"></div></div>
+            
         <!--  -->
         <div class="text-center border border-light p-5" id="add_project_form">
           <p class="h4 mb-4">Create Project</p>
